--- a/etc/supervisor/conf.d/moztrap-supervisor.conf
+++ b/etc/supervisor/conf.d/moztrap-supervisor.conf
@@ -1,15 +1,11 @@
-
 [program:nginx]
-command = /usr/sbin/nginx -g "daemon off;"
+command=/usr/sbin/nginx
 
 [program:uwsgi]
-command = /usr/local/bin/uwsgi /moztrap-uwsgi.ini
+command=/usr/local/bin/uwsgi /moztrap/moztrap-uwsgi.ini
 
 [program:memcached]
 command=/usr/bin/memcached -u www-data
 numprocs=1
 startsecs=3
-
-; Need to wait for currently executing tasks to finish at shutdown.
-; Increase this if you have very long running tasks.
-stopwaitsecs = 3
+stopwaitsecs=3
