re-added daemon mode off

--- a/etc/supervisor/conf.d/moztrap-supervisor.conf
+++ b/etc/supervisor/conf.d/moztrap-supervisor.conf
@@ -1,5 +1,5 @@
 [program:nginx]
-command=/usr/sbin/nginx
+command=/usr/sbin/nginx -g "daemon off;"
 
 [program:uwsgi]
 command=/usr/local/bin/uwsgi /moztrap/moztrap-uwsgi.ini
